--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/jayglen81/Liribot/issues"
   },
-  "homepage": "https://github.com/jayglen81/Liribot#readme"
+  "homepage": "https://github.com/jayglen81/Liribot#readme",
+  "dependencies": {
+    "all": "0.0.0",
+    "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.1.1"
+  }
 }
