adding some more code

--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "Liribot",
   "version": "1.0.0",
-  "description": "you ask it things it gets you things.",
+  "description": "1)Clearly state the problem the app is trying to solve (i.e. what is it doing and why) 2)Give a high-level overview of how the app is organized 3)Give start-to-finish instructions on how to run the app 4)Include screenshots, gifs or videos of the app functioning 5)Contain a link to a deployed version of the app 6)Clearly list the technologies used in the app 7)State your role in the app development",
   "main": "Liri.js",
+  "dependencies": {
+    "all": "^0.0.0",
+    "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.1.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,12 +24,5 @@
   "bugs": {
     "url": "https://github.com/jayglen81/Liribot/issues"
   },
-  "homepage": "https://github.com/jayglen81/Liribot#readme",
-  "dependencies": {
-    "all": "0.0.0",
-    "axios": "^0.19.0",
-    "dotenv": "^8.0.0",
-    "moment": "^2.24.0",
-    "node-spotify-api": "^1.1.1"
-  }
+  "homepage": "https://github.com/jayglen81/Liribot#readme"
 }
